this is going to fix the overflow

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
 	color:white;
 	margin: auto;
 	width:100%;
+	min-width:600px;
 }
 
 ::-moz-selection {
